--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -31,3 +31,6 @@ parity-scale-codec = { version = "2.0.0", default-features = false }
 sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
 beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master" }
 beefy-gadget-rpc = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master" }
+custom-rpc = { path = "../custom/rpc"}
+polkadot-runtime = { path = "../runtime/polkadot"}
+frame-system = {git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
